--- a/src/index.css
+++ b/src/index.css
@@ -25,5 +25,5 @@ body {
 }
 
 .header-drop {
-  background: linear-gradient(0deg, rgba(255,0,0,0) 0%, rgba(0,0,0,0.2) 100%);
+  background: linear-gradient(0deg, rgba(255, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
 }
